# VoiceStreamAI

./: Dockerfile  README.md  pyproject.toml
client/: VoiceStreamAI_Client.html  utils.js
src/: audio_utils.py  client.py  main.py  run.py  server.py
src/app/: client.py  main.py  server.py
src/app/asr/: asr_factory.py  asr_interface.py  faster_whisper_asr.py  whisper_asr.py
src/app/buffering_strategy/: buffering_strategies.py  buffering_strategy_factory.py  buffering_strategy_interface.py
src/app/tts/: tts.py  tts_factory.py  tts_interface.py
src/app/vad/: pyannote_vad.py  vad_factory.py  vad_interface.py
src/asr/: asr_factory.py  asr_interface.py  faster_whisper_asr.py  whisper_asr.py
src/buffering_strategy/: buffering_strategies.py  buffering_strategy_factory.py
src/test/asr/: test_asr.py
src/test/server/: test_server.py
src/test/vad/: test_pyannote_vad.py
src/vad/: pyannote_vad.py
test/asr/: test_asr.py
test/server/: test_server.py
test/vad/: test_pyannote_vad.py
